<resources>
    <string name="preference_file_key">PREFERENCE_KEY</string>
    <string name="user_key">USER_KEY</string>
    <string name="kpr_key">KPR_KEY</string>
    <string name="update_time__key">UPDATE_TIME_KEY</string>

    <string name="app_name">КрП Чернівці</string>
    <string name="krp_name">Назва КрП</string>
    <string name="user_name">Ім\'я користувача</string>
    <string name="password">Пароль</string>
    <string name="exit">Вихід</string>
    <string name="enter">Увійти</string>
    <string name="new_record">Новий запис</string>
    <string name="auto_number">Номер авто</string>
    <string name="driver_name">ПІБ водія</string>
    <string name="age">Є пасажири віком 18-60 років?</string>
    <string name="search">Пошук</string>
    <string name="record">Запис</string>
    <string name="passengers_number">Кількість пасажирів</string>
    <string name="passengers_names">ПІБ пасажирів</string>
    <string name="additional_info">Додаткова інформація</string>
    <string name="search_person">Пошук особи</string>
    <string name="search_data">Данні для пошуку</string>
    <string name="search_result">Результат пошуку</string>
    <string name="ok">ОК</string>
    <string name="no_krp">Не вибранний контрольний пунк</string>
    <string name="no_user">Не вибранний користувач</string>
    <string name="wrong_password">Невіврний пароль</string>
    <string name="wrong_auto_number">Введить номер авто</string>
    <string name="wrong_driver_name">Введить ПІБ водія</string>
    <string name="wrong_search">Потрібно 3 і більше перших літер призвища</string>
    <string name="empty_search">Нічого не знайдено</string>
    <string name="success_record">Запис створенний успішно</string>



</resources>