<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_green"
    tools:context=".presentation.NewRecordActivity">

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent=".50"/>

    <TextView
        android:id="@+id/tv_new_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/new_record"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_auto_num"
        style="@style/EditText"
        app:layout_constraintTop_toBottomOf="@+id/tv_new_record"
        android:hint="@string/auto_number"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/btn_record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_record"/>

    <EditText
        android:id="@+id/et_driver_name"
        style="@style/EditText"
        android:hint="@string/driver_name"
        app:layout_constraintTop_toBottomOf="@+id/et_auto_num"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_record"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/record"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_exit"
        android:layout_marginBottom="20dp"
        android:padding="15dp"
        app:layout_constraintWidth_percent="0.5"
        android:backgroundTint="@color/yellow" />

    <CheckBox
        android:id="@+id/chb_passengers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/et_driver_name"
        app:layout_constraintTop_toBottomOf="@+id/et_driver_name"
        android:layout_marginTop="15dp"
        android:text="@string/age"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:buttonTint="@color/white"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_additional_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/chb_passengers"
        app:layout_constraintBottom_toTopOf="@+id/btn_exit">

        <ImageButton
            android:id="@+id/btn_add"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/yellow"
            android:src="@drawable/add_24"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/btn_remove"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/yellow"
            android:src="@drawable/remove_24"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_add"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_remove"
            android:text="0"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/passengers_number"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_number"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="0dp" />

        <EditText
            android:id="@+id/et_passengers_names"
            style="@style/EditText"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_remove"
            android:hint="@string/passengers_names"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/et_additional_info"
            style="@style/EditText"
            app:layout_constraintTop_toBottomOf="@+id/et_passengers_names"
            android:hint="@string/additional_info"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        android:backgroundTint="@color/yellow"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <Button
        android:id="@+id/btn_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="15dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/yellow"
        android:text="@string/search"/>


</androidx.constraintlayout.widget.ConstraintLayout>